add actuator add docker/compose add client config

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -10,3 +10,7 @@ spring:
           search-locations: classpath:/config
 server:
   port: 8082
+management:
+  endpoints:
+    web:
+      base-path: /
