--- a/src/main/resources/config/config-client-dev.properties
+++ b/src/main/resources/config/config-client-dev.properties
@@ -1,2 +1,7 @@
-example.example= dev
-no.warn= rtrwer
+example.example = dev hi
+example.clientRest = eureka-config-client-client
+no.warn = rtrwer
+eureka.instance.preferIpAddress = true
+eureka.client.serviceUrl.defaultZone = http://localhost:8070/eureka
+eureka.client.fetchRegistry = true
+eureka.client.registerWithEureka = true
