--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -14,9 +14,12 @@ server:
  #actuator
 management:
   endpoints:
+    enabled-by-default: true
     web:
-      base-path: /
-    enabled-by-default: false
+#      base-path: /
+      exposure:
+        include:
+          - '*'
   endpoint:
     health:
       enabled: true
