--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,13 +1,53 @@
 version: '3.7'
 services:
+  postgres:
+    image: postgres:15.8-bullseye
+    environment:
+      POSTGRES_USER: tony
+      POSTGRES_PASSWORD: tony
+      POSTGRES_DB: tony
+      PGDATA: /var/lib/postgresql/data/pgdata
+    volumes:
+      - ./pgdata:/var/lib/postgresql_tony/data/pgdata
+    ports:
+      - "5432:5432"
+    networks:
+      backend:
+        aliases:
+          - "postgres"
   config-server:
-    image: config-server:0.0.1
+    image: antontitow/config-server:0.0.1
     ports:
       - "8082:8082"
     networks:
       backend:
         aliases:
           - "server-config"
+#  keykloak:
+#    container_name: baeldung-keycloak.openid-provider
+#    image: quay.io/keycloak/keycloak:25.0.1
+#    command:
+#      - start-dev
+#      - --import-realm
+#    ports:
+#      - 8080:8080
+#    volumes:
+#      - ./keycloak/:/opt/keycloak/data/import/
+#    environment:
+#      KEYCLOAK_ADMIN: admin
+#      KEYCLOAK_ADMIN_PASSWORD: admin
+#      KC_HTTP_PORT: 8080
+#      KC_HOSTNAME_URL: http://localhost:8080
+#      KC_HOSTNAME_ADMIN_URL: http://localhost:8080
+#      KC_HOSTNAME_STRICT_BACKCHANNEL: true
+#      KC_HTTP_RELATIVE_PATH: /
+#      KC_HTTP_ENABLED: true
+#      KC_HEALTH_ENABLED: true
+#      KC_METRICS_ENABLED: true
+#    networks:
+#      backend:
+#        aliases:
+#          - "keycloak"
 networks:
   backend:
     driver: bridge
